public/stylesheets/app.css
/* ... */
.content h2:not(:first-child) {
  margin-top: 1.875rem; }

.content h3:not(:first-child) {
  margin-top: 0.9375rem; }

.content h4:not(:first-child) {
  margin-top: 0.3125rem; }

.content h5:not(:first-child) {
  margin-top: 0.3125rem; }

.content h6:not(:first-child) {
  margin-top: 0.3125rem; }

.content hr {
  margin-bottom: 2.1875rem; }
  .content hr:not(:first-child) {
    margin-top: 2.1875rem; }

.content p:not(:first-child) {
  margin-top: 0.3125rem; }

.content ul:not(:first-child) {
  margin-top: 0.625rem; }

.content .split__container:not(:first-child) {
  margin-top: 0.9375rem; }

.navigation {
  padding: 1.25rem 1.5625rem;
  position: relative; }
  @media (min-width: 600px) {
    .navigation {
      text-align: center; } }
  @media (min-width: 900px) {
    .navigation {
      -ms-flex-align: center;
          align-items: center;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-pack: justify;
          justify-content: space-between; } }

@media (max-width: 600px) {
  .navigation__actions {
    background-color: #F1F4F6;
    display: none;
    left: 0;
    padding-top: 0.9375rem;
    padding-bottom: 0.9375rem;
    position: absolute;
    top: 100%;
    width: 100%; }
    .navigation__actions::after {
      background: linear-gradient(rgba(241, 244, 246, 0.99), rgba(241, 244, 246, 0));
      content: '';
      display: block;
      height: 100px;
      position: absolute;
      top: 100%;
      width: 100%; }
    .navigation__toggle:checked ~ .navigation__actions {
      display: block; } }

.navigation__logo {
  display: block; }
  @media (min-width: 600px) {
    .navigation__logo {
      margin-left: auto;
      margin-right: auto; } }
  @media (max-width: 600px) {
    .navigation__logo {
      max-width: 200px; } }

.navigation__items {
  list-style: none;
  margin: 0;
  padding: 0; }
  @media (min-width: 600px) and (max-width: 900px) {
    .navigation__items {
      margin-top: 0.625rem; } }

@media (min-width: 600px) {
  .navigation__item {
    display: inline-block; }
    .navigation__item:not(:last-child) {
      margin-right: 1.875rem; } }

@media (max-width: 600px) {
  .navigation__item {
    padding: 0.9375rem 1.5625rem;
    text-align: right; } }

.navigation__link {
  color: #212F3C;
  font-size: 1rem;
  line-height: 1.375rem;
  text-decoration: none; }
  @media (max-width: 600px) {
    .navigation__link {
      font-size: 21px; } }
  .navigation__item.is-current-page .navigation__link {
    box-shadow: 0 2px 0 #0058FF; }

@media (min-width: 600px) {
  .navigation__toggle {
    display: none; } }

@media (max-width: 600px) {
  .navigation__toggle-label {
    cursor: pointer;
    position: absolute;
    right: 1.5625rem;
    top: 50%;
    transform: translateY(-50%); }
    .navigation__toggle:focus ~ .navigation__toggle-label:not(:hover) {
      outline: 1px dotted #0058FF; }
    .navigation__toggle-label::before {
      background-image: url("data:image/svg+xml;utf8,%3Csvg%20width%3D%2230%22%20height%3D%2218%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%2016h15v2H0v-2zm0-8h30v2H0V8zm0-8h30v2H0V0z%22%20fill%3D%22%230058FF%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E");
      background-position: center;
      background-repeat: no-repeat;
      content: '';
      display: block;
      height: 30px;
      width: 30px; }
      .navigation__toggle:checked ~ .navigation__toggle-label::before {
        background-image: url("data:image/svg+xml;utf8,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22%230058FF%22%20fill-rule%3D%22evenodd%22%3E%3Cpath%20d%3D%22M2.1.686L23.315%2021.9l-1.415%201.415L.686%202.1z%22%2F%3E%3Cpath%20d%3D%22M21.9.686l1.414%201.415L2.1%2023.314.686%2021.899z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E"); } }

@media (min-width: 600px) {
  .navigation__toggle-label {
    display: none; } }

.container--large {
  margin: auto;
  max-width: 1150px; }

.container--small-padding {
  padding: 0.625rem; }

@media (min-width: 600px) {
  .container--small-padding\@medium {
    padding: 0.625rem; } }

@media (min-width: 900px) {
  .container--small-padding\@large {
    padding: 0.625rem; } }

.container--medium-padding {
  padding: 1.5625rem; }

@media (min-width: 600px) {
  .container--medium-padding\@medium {
    padding: 1.5625rem; } }

@media (min-width: 900px) {
  .container--medium-padding\@large {
    padding: 1.5625rem; } }

.container--large-padding {
  padding: 3.125rem; }

@media (min-width: 600px) {
  .container--large-padding\@medium {
    padding: 3.125rem; } }

@media (min-width: 900px) {
  .container--large-padding\@large {
    padding: 3.125rem; } }

.spacing--bottom-small {
  margin-bottom: 0.625rem; }

.spacing--bottom-medium {
  margin-bottom: 1.5625rem; }

.spacing--bottom-large {
  margin-bottom: 3.125rem; }

.spacing--bottom-xlarge {
  margin-bottom: 4.6875rem; }

.spacing--bottom-xxlarge {
  margin-bottom: 7.8125rem; }

.spacing--top-small {
  margin-top: 0.625rem; }

.spacing--top-medium {
  margin-top: 1.5625rem; }

.spacing--top-large {
  margin-top: 3.125rem; }

.spacing--top-xlarge {
  margin-top: 4.6875rem; }

.spacing--top-xxlarge {
  margin-top: 7.8125rem; }

.split__container,
.split__container--spacing-large,
.split__container--spacing-none {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-pack: justify;
      justify-content: space-between;
  margin-bottom: -1.25rem; }

[class*="split--"] {
  width: calc(100%); }
  [class*="split--"]:not(:last-child) {
    margin-bottom: 1.25rem; }

.split__container > .split--66 {
  margin-bottom: 1.25rem;
  width: calc(66.666% - 12.5px); }
  @media (min-width: 600px) {
    .split__container > .split--66\@medium {
      width: calc(66.666% - 12.5px); } }
  @media (min-width: 900px) {
    .split__container > .split--66\@large {
      width: calc(66.666% - 12.5px); } }
/* ... */

